agents_app2: complete feature #22 сотрудник_карточка_партнера_и_отчеты
